# brimz-dashboard

./: .env.example  .gitignore  README.md  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: b4d4b53fa3e7_initial_schema.py  c7e1a9d20f44_staff_users_password_hash.py
backend/brimz/: __init__.py  cli.py  config.py
backend/brimz/api/: __init__.py  deps.py  main.py  security.py
backend/brimz/api/playback/: __init__.py  clock.py  state.py
backend/brimz/api/routers/: __init__.py  admin.py  auth.py  commerce.py  events.py  live.py  ops.py  playback.py  venues.py
backend/brimz/api/schemas/: __init__.py  admin.py  auth.py  core.py  extended.py  live.py
backend/brimz/api/services/: __init__.py  energy.py  kpis.py
backend/brimz/db/: __init__.py  base.py
backend/brimz/db/models/: __init__.py  core.py  extended.py  wearable.py
backend/brimz/seed/: __init__.py  fitbit_loader.py  generate.py
backend/brimz/seed/fitbit_fixtures/: activity_2026-06-15.json  heartrate_2026-06-15.json  profile.json
backend/brimz/validation/: __init__.py  check_integrity.py
backend/tests/: test_acceptance.py  test_api.py  test_auth.py  test_playback_clock.py
brimz-dashboard/: .env.example  .gitignore  package-lock.json  package.json  tailwind.config.js
brimz-dashboard/src/: App.tsx
qa/: README.md
qa/e2e/: .gitignore  package-lock.json  package.json  playwright.config.ts
qa/smoke/: lib.sh  m2_api.sh  (+3 more)
src/: App.tsx  index.css
(+64 files in other folders)
