[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "brimz"
version = "0.1.0"
description = "Brimz MVP backend — database foundation (Milestone 1)"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0,<3",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "pydantic-settings>=2.0",
    "faker>=25",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
brimz = "brimz.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["brimz*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
