[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "brimz"
version = "0.2.0"
description = "Brimz MVP backend — database foundation + REST/WebSocket API (Milestones 1–2)"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0,<3",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "pydantic-settings>=2.0",
    "faker>=25",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[project.scripts]
brimz = "brimz.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["brimz*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
